[package]
name = "permission"
version = "0.1.0"
edition = "2021"
authors = ["Yingqi Zhang <1501609820@qq.com>"]
description = "user and permission management system used by ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/yingqi-z20/arceos"
repository = "https://github.com/yingqi-z20/arceos/tree/main/crates/permission"
documentation = "https://github.com/yingqi-z20/arceos/tree/main/doc"

[dependencies]
axfs_vfs = { path = "../axfs_vfs" }
axerrno = { path = "../axerrno" }
capability = { path = "../capability" }
axsync = { path = "../../modules/axsync" }
log = "0.4"
